{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 15,
  "lineage": "9e76838f-e4fc-368a-9aab-5b2394e03dfb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tfEC2Web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc75a8978fbbc969",
            "arn": "arn:aws:ec2:ap-northeast-1:767526391391:instance/i-0d35813cf107a1f1d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-081e8433c7be73324",
                "volume_id": "vol-0617611fee64e4135",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d35813cf107a1f1d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-and-infra-ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04182cc0e500119fa",
            "private_dns": "ip-10-0-10-10.ap-northeast-1.compute.internal",
            "private_ip": "10.0.10.10",
            "public_ip": "18.179.6.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0617611fee64e4135",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ca78559027acb2c",
            "tags": {
              "Name": "tfEC2Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0774e068cec0b3cd3"
            ]
          },
          "dependencies": [
            "aws_security_group.tfWebSg",
            "aws_subnet.tfPublicSubnet1a",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tfIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767526391391:internet-gateway/igw-0f5028bd66c659d73",
            "id": "igw-0f5028bd66c659d73",
            "owner_id": "767526391391",
            "tags": {
              "Name": "tfIGW"
            },
            "vpc_id": "vpc-0699921447e4f9b56"
          },
          "dependencies": [
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfPublicSubnetRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e688987844628b6a",
            "owner_id": "767526391391",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5028bd66c659d73",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfPublicSubnetRouteTable"
            },
            "vpc_id": "vpc-0699921447e4f9b56"
          },
          "dependencies": [
            "aws_internet_gateway.tfIGW",
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfRouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa65ad4fe220bd07",
            "route_table_id": "rtb-0e688987844628b6a",
            "subnet_id": "subnet-01ca78559027acb2c"
          },
          "dependencies": [
            "aws_internet_gateway.tfIGW",
            "aws_route_table.tfPublicSubnetRouteTable",
            "aws_subnet.tfPublicSubnet1a",
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfWebSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767526391391:security-group/sg-0774e068cec0b3cd3",
            "description": "tfWebSg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0774e068cec0b3cd3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200822095045632300000001",
            "name_prefix": "",
            "owner_id": "767526391391",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfWebSg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699921447e4f9b56"
          },
          "dependencies": [
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3910565429",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0774e068cec0b3cd3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.tfWebSg",
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1604068224",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0774e068cec0b3cd3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.tfWebSg",
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_web_v6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3562981724",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0774e068cec0b3cd3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.tfWebSg",
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tfPublicSubnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767526391391:subnet/subnet-01ca78559027acb2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-01ca78559027acb2c",
            "map_public_ip_on_launch": true,
            "owner_id": "767526391391",
            "tags": {
              "Name": "tfPublicSubnet1a"
            },
            "vpc_id": "vpc-0699921447e4f9b56"
          },
          "dependencies": [
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767526391391:vpc/vpc-0699921447e4f9b56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2c1ed8abb6db99f",
            "default_route_table_id": "rtb-0d9d3939d13131421",
            "default_security_group_id": "sg-03a99d36a33373d15",
            "dhcp_options_id": "dopt-0e457b69",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0699921447e4f9b56",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d9d3939d13131421",
            "owner_id": "767526391391",
            "tags": {
              "Name": "tfVPC"
            }
          }
        }
      ]
    }
  ]
}